<resources>
    <string name="property_description">Description</string>
    <string name="txt_property_space_ar">Property space</string>
    <string name="dialog_region">Area</string>
    <string name="address">Address</string>
    <string name="txt_owner_name_colon">Advertiser Name:</string>
    <string name="txt_company_phone_number_colon">Company Phone:</string>
    <string name="txt_company_email_colon">Email :</string>
    <string name="emailid"> Email </string>


    <string name="app_name">HomePlus</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="my_account">My account</string>
    <string name="media_center">Media Center</string>
    <string name="social_media">Social Media</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Login</string>
    <string name="delete">Delete</string>
    <string name="txt_skip">Skip ></string>
    <string name="alert_no_internet">Network Unavailable</string>
    <string name="btn_txt_request_property_service">Request Property Service</string>
    <string name="txt_menu_header">Menu</string>
    <string name="hint_txt_name">Name</string>
    <string name="hint_txt_email">E-mail</string>
    <string name="hint_txt_login_email">Email</string>
    <string name="hint_txt_confirm_pwd">Confirm Password</string>
    <string name="hint_txt_gender">Gender</string>
    <string name="hint_txt_age">Age</string>
    <string name="hint_txt_subject">Subject</string>
    <string name="hint_txt_mesage">Message</string>
    <string name="hint_txt_mobile">Mobile Number</string>
    <string name="hint_txt_mobno">Mob No</string>
    <string name="hint_txt_telno">Tel No</string>
    <string name="btn_txt_register">Register your Account</string>
    <string name="txt_register_title_action_bar">Register</string>
    <string name="hint_txt_user_name">User Name</string>
    <string name="hint_txt_pswd">Password</string>
    <string name="txt_remember_me">Remember Me</string>
    <string name="txt_forgot_pswd">Forget Your Password</string>
    <string name="btn_txt_login">Login Your Account</string>
    <string name="btn_txt_register_in_login">Register</string>
    <string name="txt_login_title_action_bar">Login </string>
    <string name="txt_my_account_title_action_bar">My Account</string>
    <string name="alert_no_empty_field">No Empty Fields Allowed</string>
    <string name="alert_invalid_email">Invalid Email</string>
    <string name="alert_invalid_mobile_no">Invalid Mobile Number</string>
    <string name="alert_invalid_password">Password should be minimum of 6 characters</string>
    <string name="alert_mismatched_password">Password and confirm password are mismatched</string>
    <string name="alert_msg_registration_success">Registration Completed Successfully</string>
    <string name="alert_enter_email_id">Please enter email-id to proceed</string>
    <string name="txt_real_estate_title_action_bar">Real Estate</string>
    <string name="txt_special_offer_title_action_bar">Special Offers</string>
    <string name="btn_txt_advance_search">Advanced Search</string>
    <string name="hint_txt_search">Search...</string>
    <string name="txt_kd">KD</string>
    <string name="txt_property_type">Property Type:</string>
    <string name="txt_property_space">Property Space:</string>
    <string name="txt_property_region">Region:</string>
    <string name="txt_property_location">Street Location:</string>
    <string name="txt_property_Address">Property Address</string>
    <string name="txt_owner_details">Owner Details</string>
    <string name="txt_share_now">Share Now</string>
    <string name="txt_company_name">Company Name</string>
    <string name="txt_working_hours">Working Hours</string>
    <string name="txt_address">Address</string>
    <string name="txt_head_property_specification">Property Specification</string>
    <string name="txt_video_gallery_heading">Video Gallery</string>
    <string name="txt_sponsers_heading">Sponsors</string>
    <string name="txt_property_location_map">Property Location Map</string>
    <string name="btn_txt_individual">Individual</string>
    <string name="btn_txt_partners">partners</string>
    <string name="btn_txt_coroperateoverview">corporateoverview</string>
    <string name="btn_txt_addressinformation">address information</string>
    <string name="btn_txt_feedback">feedback/inquiry form</string>
    <string name="btn_txt_corporate">Corporate</string>
    <string name="txt_construction_title_action_bar">Construction &amp; Services</string>
    <string name="txt_construction_individual">Individual</string>
    <string name="txt_construction_corporate">Corporate</string>
    <string name="txt_location">Location</string>
    <string name="txt_rating">Rating</string>
    <string name="txt_no_data">No Data Found</string>
    <string name="txt_result_found">Results Found</string>
    <string name="txt_rating_count">Persons Rated</string>
    <string name="spinner_txt_tile_location">Location</string>
    <string name="alert_select_location">Please select a location</string>
    <string name="txt_phone_no">Phone Number</string>
    <string name="txt_email">Email</string>
    <string name="txt_nationality">Nationality</string>
    <string name="txt_ratingg">Rating</string>
    <string name="txt_service_details">Service Details</string>
    <string name="txt_experience_details">Experience Details</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="txt_rate_now">You can Rate Now</string>
    <string name="alert_on_request_property_service">Login Required for Request a Property Service</string>
    <string name="txt_request_property_service">Request Property Service</string>
    <string name="txt_fill_form">Fill The Form</string>
    <string name="txt_edit_your_profile">Edit Your Profile</string>
    <string name="txt_send_feedback">Send your feedback</string>
    <string name="txt_first_name">Name</string>
    <string name="txt_Last_name">Last Name</string>
    <string name="txt_select_region">Select Region</string>
    <string name="txt_select_purpose">Select Purpose</string>
    <string name="txt_select_property_type">Select Property Type</string>
    <string name="btn_txt_submit">Submit</string>
    <string name="btn_txt_reset">Reset</string>
    <string name="spinner_title_txt_select">Select</string>
    <string name="alert_no_null_in_spinner">Select atleast one item</string>
    <string name="alert_confirm_logout">Do you want to logout?</string>
    <string name="language_flip">Do you want to change the Language?</string>
    <string name="alert_delete">Do you want to delete?</string>
    <string name="alert_log_out">Logout Successfully</string>
    <string name="txt_compny_name">Company Name:</string>
    <string name="txt_company_phone_number">Phone Number:</string>
    <string name="txt_company_email">Email:</string>
    <string name="txt_company_website">Website:</string>
    <string name="txt_owner_name">Owner Name:</string>
    <string name="btn_txt_edit_profile">Edit Profile</string>
    <string name="btn_txt_my_request">My Requests</string>
    <string name="btn_txt_notification">Property Notifications</string>
    <string name="btn_txt_logout">Logout</string>
    <string name="btn_txt_photo_gallery">Photo Gallery</string>
    <string name="btn_txt_photo_news">News</string>
    <string name="btn_txt_video_gallery">Video Gallery</string>
    <string name="txt_photo_gallery_list">Photo Album List</string>
    <string name="txt_filter_based_on">Filter Based On</string>
    <string name="txt_read_more">Read more...</string>
    <string name="alert_txt_server_error">Server Error</string>
    <string name="spinner_title_txt_month">Month</string>
    <string name="txt_year">Year</string>
    <string name="txt_select">--select--</string>
    <string name="txt_region">Region</string>
    <string name="txt_purpose">Purpose</string>
    <string name="txt_property">Property Type</string>
    <string name="txt_head_notification">Notifications</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_pusnotifications">Notifications</string>
    <string name="invalid_phone">Invalid Phone Number</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="partners">partners</string>
    <string name="nodatahtml">Content will available soon!!!!</string>
     <string name="share_app_title">We would love to connect with you. You can also share our app with your friends
            and enjoy every offers we provide within your group. Its very simple here to....</string>
    <string name="server_error">Server Error</string>
    <string name="Hp_male">Male</string>
    <string name="Hp_female">Female</string>
    <string name="Hp_pickrange">Pick Range</string>
    <string name="txt_property_location_spinner">Street Location</string>
    <string name="txt_spinner_size_from">From</string>
    <string name="txt_spinner_size_To">To</string>
    <string name="txt_workinghours">working\thours</string>
    <string name="txt_property_space_en">Property Space</string>
    <string name="txt_our_patner">Our Partners</string>
    <string name="sortby">Sort By</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="property_region">القطعه</string>
    <string name="property_street">الشارع</string>
    <string name="notlogged_in">You are not logged in</string>
    <string name="dialog_title">Would you like to login</string>
    <string name="txt_property_block">Region   :</string>
    <string name="txt_property_street">Street  :</string>
    <string name="txt_property_address">Address :</string>
    <string name="txt_property_Block">Block :</string>
    <string name="txt_company_address">Company Address</string>
    <string name="txt_company_details">Company Details</string>
    <string name="notification_region">Region      :\u0020 </string>
    <string name="notification_purpose">Purpose    :\u0020</string>
    <string name="notification_proptype">Property Type   :\u0020</string>
    <string name="nodata">No data</string>
    <string name="you_have_missed">You have missed</string>
    <string name="new_notifications">new notifications</string>
    <string name="price">Price</string>
    <!--MyAccount-->
    <string name="changepassword">Change Password</string>
    <string name="hint_oldpassword">Old Password</string>
    <string name="hint_newpassword">New Password</string>
    <string name="hint_confirmpassword">Confirm Password</string>
    <string name="news_related_images">news related images</string>
    <string name="txt_All">All</string>
    <string name="share_email">Email</string>
    <string name="ph_no">Phone Number</string>
    <string name="txt_property_avenue">Avenue :</string>
    <string name="txt_property_house">House :</string>


</resources>
