<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/username"
                android:hint="@string/hint_txt_name"
                android:paddingLeft="100dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/email"
                android:hint="@string/hint_txt_email"
                android:paddingLeft="100dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etPwd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/password"
                android:hint="@string/hint_txt_pswd"
                android:inputType="textPassword"
                android:paddingLeft="100dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etConfirmPwd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/password"
                android:hint="@string/hint_txt_confirm_pwd"
                android:inputType="textPassword"
                android:paddingLeft="100dp"
                android:singleLine="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp">

                <Spinner
                    android:id="@+id/etGender"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/gender"
                    android:hint="@string/hint_txt_gender"
                    android:paddingLeft="100dp" />

                <TextView
                    android:id="@+id/spinner_textview"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="100dp"
                    android:hint="@string/hint_txt_gender"
                    android:textSize="18sp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:padding="2dp"
                    android:textColor="@android:color/black" />

            </RelativeLayout>


            <EditText
                android:id="@+id/etAge"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/age_en"
                android:hint="@string/hint_txt_age"
                android:inputType="number"
                android:maxLength="3"
                android:paddingLeft="100dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/mobile"
                android:hint="@string/hint_txt_mobile"
                android:inputType="numberSigned"
                android:paddingLeft="100dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnRegisterAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/selector_addtocart_btn"
                android:text="@string/btn_txt_register"
                android:textAllCaps="true"
                android:textColor="@drawable/selector_addtocart_txt" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
