<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayTopInConstn"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/btn_yellow_bg"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:weightSum="1"
            android:gravity="center_vertical"
            android:background="@drawable/curved_large_bg">

            <Button
                android:id="@+id/btnAddrsinformation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/btn_txt_addressinformation"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:background="@drawable/button_curved_yellow"/>


            <Button
                android:id="@+id/btnTabFeedback"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/btn_txt_feedback"
                android:textSize="12sp"
                android:background="@drawable/button_curved_yellow" />
        </LinearLayout>
    </LinearLayout>
   <!-- <LinearLayout
        android:id="@+id/linearLayTopInConstn"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center_vertical"
        android:background="@color/btn_yellow_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center_vertical"
            android:background="@drawable/curved_large_bg">
            <Button
                android:id="@+id/btnAddrsinformation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/btn_txt_addressinformation"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:background="@drawable/button_curved_yellow"/>
            <Button
                android:id="@+id/btnTabFeedback"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/btn_txt_feedback"
                android:textAllCaps="true"
                android:background="@drawable/button_curved_white"/>
        </LinearLayout>
    </LinearLayout>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            android:id="@+id/sendfeed_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:padding="10dp"
            android:text="@string/txt_send_feedback"
            android:textColor="@android:color/black"

            android:visibility="visible"
            android:textSize="17sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="4dp"
            android:orientation="vertical">



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:hint="@string/txt_first_name"
                android:background="@drawable/edittext_silver_border"
                android:id="@+id/edit_feedback_fname" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_Last_name"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:visibility="gone"
                android:textColor="@android:color/black"
                android:id="@+id/txtlastName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:hint="@string/txt_Last_name"
                android:background="@drawable/edittext_silver_border"
                android:id="@+id/edit_feedback_lastname" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:hint="@string/txt_email"
                android:background="@drawable/edittext_silver_border"
                android:id="@+id/edit_feedback_Email" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:hint="@string/hint_txt_telno"
                android:background="@drawable/edittext_silver_border"
                android:id="@+id/edit_feedback_telephno" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:hint="@string/hint_txt_mobno"
                android:background="@drawable/edittext_silver_border"
                android:id="@+id/edit_feedback_mobileno" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:hint="@string/hint_txt_subject"
                android:background="@drawable/edittext_silver_border"
                android:id="@+id/editsubject" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:hint="@string/hint_txt_mesage"
                android:background="@drawable/edittext_silver_border"
                android:id="@+id/edit_feedback_message"
                android:lines="3"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"

            android:layout_marginBottom="20dp"
            android:layout_gravity="bottom">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_txt_submit"
                android:textColor="@android:color/white"
                android:background="@android:color/black"
                android:layout_marginRight="10dp"
                android:id="@+id/btn_feedback_submit" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_txt_reset"
                android:textColor="@android:color/white"
                android:background="@android:color/black"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:id="@+id/btn_feedback_reset" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>
